start home page

--- a/app/views/newgame.erb
+++ b/app/views/newgame.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <h1>Nouvelle partie</h1>
 <p>
 <form class="form-horizontal" action='/managem/new' method=post>
@@ -58,3 +59,4 @@
           </div>
 
 </form>
+</div>
