--- a/app/views/run.erb
+++ b/app/views/run.erb
@@ -20,7 +20,7 @@
 </div>
 
 <div class="span10">
-<h1>Partie en cours <small><%= @party %></small></h1>
+<h1>Partie en cours <small><%= @game.getName %></small></h1>
 
 </div>
 </div>
