--- a/app/views/gamelist.erb
+++ b/app/views/gamelist.erb
@@ -2,7 +2,7 @@
 <h1><%= @title %></h1>
 
 <% @games.each { |game| %>
-<li><%= game %>
+<li><a href='/managem/game/start/<%= File.basename(game) %>'><%= File.basename(game) %></a>
 <% } %>
 
 
