--- a/app/views/newgame.erb
+++ b/app/views/newgame.erb
@@ -1,7 +1,7 @@
 <div class="container">
 <h1>Nouvelle partie</h1>
 <p>
-<form class="form-horizontal" action='/managem/new' method=post>
+<form class="form-horizontal" action='/managem/game/new' method=post>
   <fieldset>
     <legend>Entraineur</legend>
 
