--- a/app/views/run.erb
+++ b/app/views/run.erb
@@ -12,7 +12,7 @@
     <a href="/managem">Home</a>
   </li>
   <li>
-    <a href="/managem/quit">Quit</a>
+    <a href="/managem/game/quit">Quit</a>
   </li>
 </ul>
 
