--- a/app/views/newgame.erb
+++ b/app/views/newgame.erb
@@ -37,7 +37,7 @@
 <div class="control-group">
     <label class="control-label" for="select01">Club</label>
     <div class="controls">
-              <select id="select01">
+              <select id="select01" name='tea_id'>
 		<% @teams.each { |team| %>
 			<option value='<%= team.getId %>'><%= team.getName %></option>"
 		<% } %>
